refactor the tests to fix smell issues after adding mutation tests